welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: type mismatch;
 found   : Int
 required: java.awt.Color
		setCouleurBrosse((i + decalage) % getMondeHauteur);baisseBrosse();leveBrosse();
                                                ^Array2:17: error: type mismatch;
 found   : Int
 required: java.awt.Color
			setCouleurBrosse((i + decalage) % getMondeHauteur);
                                                        ^