welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {

	var T = new Array[Color](getMondeHauteur())
	for (i<-0 to getMondeHauteur()-2) {
		avance();
		T(i)=getCouleurSol()
	}
	recule(getMondeHauteur()-1)

	for (i<-1 to getMondeLargeur()-1) {
		gauche();avance();droite();
		val decalage = litMessage().toInt
		setCouleurBrosse((i + decalage) % getMondeHauteur);baisseBrosse();leveBrosse();
		for (i<-0 to getMondeHauteur()-2) {
			avance();
			setCouleurBrosse((i + decalage) % getMondeHauteur);
			baisseBrosse();
			leveBrosse();
		}
		recule(getMondeHauteur()-1)
	}
}

